@@ -1054,14 +1054,6 @@ public final class SolrCore implements SolrInfoMBean, Closeable {
     }
 
 
-    try {
-      infoRegistry.clear();
-    } catch (Throwable e) {
-      SolrException.log(log, e);
-      if (e instanceof Error) {
-        throw (Error) e;
-      }
-    }
 
     try {
       if (null != updateHandler) {
@@ -1110,6 +1102,15 @@ public final class SolrCore implements SolrInfoMBean, Closeable {
       closeSearcher();
     } catch (Throwable e) {
       SolrException.log(log,e);
+      if (e instanceof Error) {
+        throw (Error) e;
+      }
+    }
+
+    try {
+      infoRegistry.clear();
+    } catch (Throwable e) {
+      SolrException.log(log, e);
       if (e instanceof Error) {
         throw (Error) e;
       }
